--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "knplabs/knp-paginator-bundle": "^2.8",
         "sensio/framework-extra-bundle": "^5.1",
+        "squizlabs/php_codesniffer": "^3.4",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
