--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-
-###> symfony/framework-bundle ###
-/.env.local
-/.env.*.local
-/public/bundles/
-/var/
-/vendor/
-###< symfony/framework-bundle ###
-
+test
 ###> symfony/phpunit-bridge ###
 .phpunit
 /phpunit.xml
